--- a/app/src/main/res/layout/log_list.xml
+++ b/app/src/main/res/layout/log_list.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    android:id="@+id/main_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,16 +16,19 @@
         android:id="@+id/logs_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignWithParentIfMissing="false"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|end"
         android:layout_margin="24dp"
         android:clickable="true"
-        app:fabSize="normal"
-        app:srcCompat="@drawable/ic_add_circle_black_24dp"
+        android:focusable="true"
         app:elevation="6dp"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="false"
-        android:layout_alignWithParentIfMissing="false"/>
+        app:fabSize="normal"
+        app:srcCompat="@drawable/ic_add_circle_black_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
