--- a/app/src/main/res/layout/about_fragment.xml
+++ b/app/src/main/res/layout/about_fragment.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2017 Full Mead Alchemist, LLC.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -18,8 +17,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.meta.AboutFragment">
 
     <ImageView
@@ -40,20 +40,46 @@
         android:text="@string/copyright"
         android:textAlignment="center" />
 
-    <TextView
-        android:id="@+id/github_url"
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/github_ref"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/github_url"
-        android:textAlignment="center" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/githubDescTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:gravity="start"
+            android:text="@string/github_project_description"
+            android:textAlignment="viewStart"
+            app:layout_constraintBottom_toBottomOf="@+id/githubImageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/githubImageView"
+            app:layout_constraintTop_toTopOf="@+id/githubImageView" />
+
+        <ImageView
+            android:id="@+id/githubImageView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:contentDescription="@string/github"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/github_logo_sm" />
+    </android.support.constraint.ConstraintLayout>
 
     <ScrollView
+        android:id="@+id/foss_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+        android:layout_height="match_parent"></ScrollView>
 </LinearLayout>
