--- a/app/src/main/res/layout/batch_log_form_fragment.xml
+++ b/app/src/main/res/layout/batch_log_form_fragment.xml
@@ -17,7 +17,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/githubDescTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Batch Log Form"
