Make the Ingredients use RecyclerView

--- a/app/src/main/res/layout/batch_detail_fragment.xml
+++ b/app/src/main/res/layout/batch_detail_fragment.xml
@@ -44,11 +44,10 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView_notes_label"
                 tools:text="Notes about the batch go here. Notes about the batch go here. Notes about the batch go here." />
 
-            <LinearLayout
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/ingredients_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
+                android:layout_height="wrap_content" />
 
             <LinearLayout
                 android:layout_width="match_parent"
