--- a/app/src/main/res/layout/ingredient_dialog.xml
+++ b/app/src/main/res/layout/ingredient_dialog.xml
@@ -13,64 +13,79 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     tools:context=".ui.batch.form.AddIngredientDialog">
 
-    <data>
 
-        <variable
-            name="viewmodel"
-            type="com.fullmeadalchemist.mustwatch.ui.common.MainViewModel" />
-    </data>
+    <Spinner
+        android:id="@+id/ingredients_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/touch_target_size"
+        android:entries="@array/sugars_list" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:orientation="horizontal">
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/quantity_amount"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/touch_target_size"
+                android:gravity="start"
+                android:hint="@string/qty_amount"
+                android:inputType="numberDecimal"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textAlignment="textStart" />
+
+        </android.support.design.widget.TextInputLayout>
 
 
         <Spinner
-            android:id="@+id/ingredients_spinner"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/touch_target_size"
-            android:entries="@array/sugars_list" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/quantity_amount"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/touch_target_size"
-                    android:gravity="start"
-                    android:hint="@string/qty_amount"
-                    android:inputType="numberDecimal"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textAlignment="textStart" />
-
-            </android.support.design.widget.TextInputLayout>
-
-
-            <Spinner
-                android:id="@+id/quantity_unit_spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:entries="@array/volume_units_list" />
-        </LinearLayout>
-
+            android:id="@+id/quantity_unit_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:entries="@array/volume_units_list" />
     </LinearLayout>
-</layout>
+
+    <LinearLayout
+        style="?android:attr/buttonBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/default_element_spacing"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/cancelButton"
+            style="?android:attr/buttonBarStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@android:string/cancel" />
+
+        <Button
+            android:id="@+id/saveButton"
+            style="?android:attr/buttonBarStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/save_button_text" />
+    </LinearLayout>
+
+</LinearLayout>
