--- a/app/src/main/res/layout/batch_form_fragment.xml
+++ b/app/src/main/res/layout/batch_form_fragment.xml
@@ -9,6 +9,10 @@
         <variable
             name="viewmodel"
             type="com.fullmeadalchemist.mustwatch.ui.common.MainViewModel" />
+
+        <variable
+            name="batch"
+            type="com.fullmeadalchemist.mustwatch.vo.Batch" />
     </data>
 
     <ScrollView
@@ -30,11 +34,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/create_batch_title"
+
                 android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_element_spacing">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/name"
@@ -42,8 +48,8 @@
                     android:layout_height="wrap_content"
                     android:hint="Batch name"
                     android:inputType="text"
-                    android:maxLines="1" />
-                <!--android:text="@{viewmodel.batch.name}" />-->
+                    android:maxLines="1"
+                    android:text="@{batch.name}" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -67,13 +73,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="48dp"
                     android:layout_marginStart="24dp"
+                    android:layout_marginLeft="24dp"
                     android:ems="10"
                     android:gravity="start|center"
                     android:maxLines="1"
+                    android:text="@{batch.createDate}"
                     android:textAlignment="textStart"
-                    tools:text="Mar 31, 2017"
-                    android:layout_marginLeft="24dp"
-                    android:text="@{viewmodel.batch.createDate}"/>
+                    tools:text="Mar 31, 2017" />
 
                 <TextView
                     android:id="@+id/createDateTime"
@@ -89,7 +95,9 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/ingredients_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                tools:itemCount="1"
+                tools:listitem="@layout/ingredient_item" />
 
 
             <android.support.constraint.ConstraintLayout
@@ -116,12 +124,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="48dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
                     android:layout_marginTop="8dp"
                     android:contentDescription="Add Yeast"
                     android:text="Add Yeast"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/add_sugar_button"
-                    android:layout_marginLeft="8dp" />
+                    app:layout_constraintTop_toBottomOf="@+id/add_sugar_button" />
 
                 <Button
                     android:id="@+id/add_nutrient_button"
@@ -202,8 +210,8 @@
                     android:layout_height="wrap_content"
                     android:hint="Target ABV%"
                     android:inputType="numberDecimal"
-                    android:maxLines="1" />
-                <!--android:text="@{safeUnbox(viewmodel.batch.targetABV)}" />-->
+                    android:maxLines="1"
+                    android:text="@{batch.targetABV}" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -217,8 +225,8 @@
                     android:layout_height="wrap_content"
                     android:hint="Target starting Specific Gravity (example: 1.115)"
                     android:inputType="numberDecimal"
-                    android:maxLines="1" />
-                <!--android:text="@{safeUnbox(viewmodel.batch.targetSgStarting)}" />-->
+                    android:maxLines="1"
+                    android:text="@{batch.targetSgStarting}" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -232,8 +240,8 @@
                     android:layout_height="wrap_content"
                     android:hint="Target final Specific Gravity (example: 1.05)"
                     android:inputType="numberDecimal"
-                    android:maxLines="1" />
-                <!--android:text="@{safeUnbox(viewmodel.batch.targetSgFinal)}" />-->
+                    android:maxLines="1"
+                    android:text="@{batch.targetSgFinal}" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -247,8 +255,8 @@
                     android:layout_height="wrap_content"
                     android:hint="Starting pH level (example: 3.7)"
                     android:inputType="numberDecimal"
-                    android:maxLines="1" />
-                <!--android:text="@{safeUnbox(viewmodel.batch.startingPh)}" />-->
+                    android:maxLines="1"
+                    android:text="@{batch.startingPh}" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -262,8 +270,8 @@
                     android:layout_height="wrap_content"
                     android:hint="starting temperature"
                     android:inputType="numberDecimal"
-                    android:maxLines="1" />
-                <!--android:text="@{safeUnbox(viewmodel.batch.startingTemp)}" />-->
+                    android:maxLines="1"
+                    android:text="@{batch.startingTemp}" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -308,11 +316,11 @@
                     android:ems="10"
                     android:inputType="textMultiLine"
                     android:lines="4"
+                    android:text="@{batch.notes}"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView_notes_label"
                     tools:text="Notes about the batch go here. Notes about the batch go here. Notes about the batch go here." />
-                <!--android:text="@{viewmodel.batch.notes}"/>-->
 
             </android.support.constraint.ConstraintLayout>
 
